--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
